c2prj1_cards/grade.txt
Grading at Sat Aug  3 07:28:46 UTC 2019
Compiling cards.c
cards.c: In function ‘suit_letter’:
cards.c:82:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void print_card(card_t c) {
 ^
cards.c:86:1: error: ISO C forbids nested functions [-Werror=pedantic]
 card_t card_from_letters(char value_let, char suit_let) {
 ^
cards.c:147:1: error: ISO C forbids nested functions [-Werror=pedantic]
 card_t card_from_num(unsigned c) {
 ^
cards.c:161:1: error: expected declaration or statement at end of input
 }
 ^
cards.c: In function ‘value_letter’:
cards.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
